--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#contact">Наші контакти</a>
         </div>
         <div class="col-lg-5">
-          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfYC9KG7Hj9ea1Af09YFWBmrD-7b-lwAY92jcdYvPoJfgKUCg/viewform?embedded=true" width="330" height="370" frameborder="0" marginheight="0" marginwidth="0">Завантаження...</iframe>
+          <iframe class="iframe" src="https://docs.google.com/forms/d/e/1FAIpQLSfYC9KG7Hj9ea1Af09YFWBmrD-7b-lwAY92jcdYvPoJfgKUCg/viewform?embedded=true" width="100%" height="660" frameborder="0" marginheight="0" marginwidth="0">Завантаження...</iframe>
         </div>
       </div>
     </div>
